# the-big-quizz-back

./: .gitignore  .python-version  README.md  pyproject.toml
db/: docker-compose.yml
flyway/conf/: flyway.conf
src/: __init__.py
src/app/: main.py
src/app/api/: routes.py
src/app/core/: config.py
