[tool.poetry]
name = "thebigquizz-back"
version = "0.1.0"
description = ""
authors = ["Etienne Fischer <etienne.fischer@totalenergies.com>"]

packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[tool.poetry.scripts]
server = "src:start_web_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
